Tue Oct 28 11:20:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/GettingStarted/run_test.pl:
          Fixed bug in this script

Tue Oct 28 10:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/GettingStarted/GettingStarted.mpc:
          Added custom idl project. This should fix the VMS link
          problems. Let us see if this works before updating
          all MPC files

Mon Oct 27 19:26:59 UTC 2008  Tim Pollock  <pollockt@ociweb.com>

        * NEWS
        * orbsvcs/Notify_Service/README
        * orbsvcs/orbsvcs/Notify/CosNotify_Service.cpp
        * orbsvcs/orbsvcs/Notify/EventChannel.cpp
        * orbsvcs/orbsvcs/Notify/Properties.cpp
        * orbsvcs/orbsvcs/Notify/Properties.h
        * orbsvcs/orbsvcs/Notify/Properties.inl
        * orbsvcs/tests/Notify/lib/Notify_Test_Client.cpp
        * orbsvcs/tests/Notify/lib/Notify_Test_Client.h

          Added new svc.conf arguments to set the filter op flag (DOC bug 2415).

        * orbsvcs/tests/Notify/Bug_2415_Regression

          Added new test for DOC bug 2415.

Mon Oct 27 17:14:04 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tao/Bounded_Sequence_CDR_T.h:
        * tao/Unbounded_Sequence_CDR_T.h:

          Revert changes to demarshal for string sequences. Improvement was due
          to a defective sequence element out operation.

Mon Oct 27 16:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/RTCORBA/Server_Declared/server.cpp:
        * tests/RTCORBA/Server_Protocol/server.cpp:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/EchoEventSupplierMain.cpp:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/EchoEventConsumerMain.cpp:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Federated/EchoEventSupplierMain.cpp:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Federated/EchoEventConsumerMain.cpp: