@@ -72,7 +72,7 @@ parse_args (int argc, ACE_TCHAR *argv[])
         break;
       case 'a':
         result = ::sscanf (ACE_TEXT_ALWAYS_CHAR (get_opts.opt_arg ()),
-                           ACE_TEXT("%hd"),
+                           "%hd",
                            &priority1);
         if (result == 0 || result == EOF)
           ACE_ERROR_RETURN ((LM_ERROR,
@@ -81,7 +81,7 @@ parse_args (int argc, ACE_TCHAR *argv[])
         break;
       case 'b':
         result = ::sscanf (ACE_TEXT_ALWAYS_CHAR (get_opts.opt_arg ()),
-                           ACE_TEXT("%hd"),
+                           "%hd",
                            &priority2);
         if (result == 0 || result == EOF)
           ACE_ERROR_RETURN ((LM_ERROR,
@@ -90,7 +90,7 @@ parse_args (int argc, ACE_TCHAR *argv[])
         break;
       case 'e':
         result = ::sscanf (ACE_TEXT_ALWAYS_CHAR (get_opts.opt_arg ()),
-                           ACE_TEXT("%u"),
+                           "%u",
                            &protocol1);
         if (result == 0 || result == EOF)
           ACE_ERROR_RETURN ((LM_ERROR,
@@ -99,7 +99,7 @@ parse_args (int argc, ACE_TCHAR *argv[])
         break;
       case 'f':
         result = ::sscanf (ACE_TEXT_ALWAYS_CHAR (get_opts.opt_arg ()),
-                           ACE_TEXT("%u"),
+                           "%u",
                            &protocol2);
         if (result == 0 || result == EOF)
           ACE_ERROR_RETURN ((LM_ERROR,
